update link khuyen mai

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="news/news.html">Đi tới trang tin tức</a>
                 </li>
                 <li>
-                    <a href="https://kfcvietnam.com.vn/error/page-not-found"
+                    <a href="https://kfcvietnam.com.vn/menu/hot-deal"
                         >Đi tới trang khuyến mãi</a
                     >
                 </li>
